--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,6 +11,7 @@ section-title
 @import 'theme.css';
 @import 'variables-colors.css';
 @import 'bootstrap-custom.css';
+@import 'nav.css';
 @import 'parts.css';
 @import 'form.css';
 @import 'table.css';
@@ -261,10 +262,12 @@ title-app
 /* --------------------------------------------------------------------
 * - complementary classes
 ---------------------------------------------------------------------- */
-.blur {
-   box-shadow: inset 0 0 2px #fefefed1;
-   -webkit-backdrop-filter: saturate(200%) blur(30px);
-   backdrop-filter: saturate(200%) blur(30px);
-   background-color: hsla(0,0%,100%,.8)!important;
+.bg-shadow-opacity {
+    box-shadow: inset 0 0 2px #fefefed1;
+    background-color: hsla(0,0%,100%,.7)!important;
 }
+.blur {
+    backdrop-filter: blur(30px);
+}
+
 .bg-gradient-secondary { background-image: linear-gradient(195deg,#747b8a,#495361);}
