--- a/src/styles/parts.css
+++ b/src/styles/parts.css
@@ -3,71 +3,11 @@
 *  CSS APP parts
 *
 * -
-* - nav
 * - header-app
 * - footer-app
 * -
 *
 * //////////////////////////////////////////////////////////////////// */
-
-/* --------------------------------------------------------------------
-* - nav
----------------------------------------------------------------------- */
-.navbar-app-content{
-	display: flex;
-	align-items: center;
-    justify-content: space-between;
-	width: 100%;
-}
-
-.navbar .navbar-brand {
-	font-size: 1.4rem;
-	color: #344767;
-	font-weight: 600;
-}
-
-.content-nav-aux{ align-items: center;}
-
-.content-navbar-app .content-nav-aux .nav-item.dropdown:nth-child(2) .nav-link{ padding-right: 0!important;}
-
-@media (max-width: 992px) {
-	.content-navbar-app .navbar-brand {
-		order: 2;
-		margin-left: 1rem;
-		margin-right: 1rem;
-	}
-
-	.content-navbar-app .navbar-toggler {
-		order: 1;
-		width: 2rem;
-		margin-top: 0.25rem;
-	}
-
-	.content-navbar-app .content-nav-aux {
-		flex: 1;
-		flex-direction: row;
-		justify-content: flex-end;
-		padding-left: 0 !important;
-		order: 3;
-	}
-}
-@media (max-width: 991.98px) {
-	.navbar-toggler+.navbar-collapse .dropdown.nav-item .dropdown-menu {
-		overflow: auto;
-	}
-}
-
-@media (max-width: 768px) {
-	.content-navbar-app .navbar-brand .logo {
-		font-size: 1.4rem;
-	}
-}
-
-@media (max-width: 480px) {
-	.content-navbar-app .navbar-brand .logo {
-		font-size: 1.1rem;
-	}
-}
 
 /* --------------------------------------------------------------------
 * - header-app
